--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 		<version>1.17.1</version>
 	</dependency>
 
+	<!-- mongo integration -->
+	<dependency>
+		<groupId>org.mongodb</groupId>
+		<artifactId>mongodb-driver-sync</artifactId>
+		<version>4.11.1</version>
+	</dependency>
 
 
 
