--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,15 @@
 	<artifactId>slf4j-log4j12</artifactId>
 	<version>1.7.30</version>
 </dependency>
+
+	<!-- Jackson for JSON processing -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.15.2</version>
+	</dependency>
+
+
 </dependencies>
 
 <build>
